src/components/Template/Navbar.css
.nav-footer-text {
    font-size: 10px;
}

.nav-drawer .ant-drawer-content{
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

@media(max-width: 320px){
    .nav-footer-text{
        display: none
    }
}

.topback {
    height: constant(safe-area-inset-top);
    height: env(safe-area-inset-top);
    z-index: 99999;
    top: 0;
    left: 0;
    width: 100vw;
}
.navbar {
    transform: translateY(constant(safe-area-inset-top));
    transform: translateY(env(safe-area-inset-top));
}

